Added About Section

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -133,14 +133,17 @@
             </div>
             <div class="about-team">
                 <div class="about-name-img-container">
-                    <h3 class="about-name">Riley Hoffman</h3>
-                    <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs" draggable="false">
+                    <h3 class="about-name">Cody Wise</h3>
+                    <img src="../assets/about-cody.jpg" alt="" class="about-imgs" draggable="false">
                 </div>
                 <div class="about-bio-container">
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
+                    <ul>
+                        <li class="about-bio">Cody is a full stack software developer in training living in Portland, Oregon</li>
+                        <li class="about-bio">Cody enjoys using his skills to solve problems in innovative ways.</li>
+                        <li class="about-bio">When he is not coding, you can find him spending time with family, cooking, hiking, and playing videogames.</li>
+                        <li class="about-bio">Favorite Mario Character: Bowser</li>
+                        <li class="about-bio">Favorite Retro Game: Super Mario Bros 3</li>
+                    </ul>
                 </div>
             </div>
         </div>
