updating about page

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -92,17 +92,16 @@
         <h1></h1>
         <div id="about-container">
             <div class="about-team">
-                <h3 class="about-name">Riley Hoffman</h3>
+                <h3 class="about-name">Beau Elliott</h3>
                 <div class="about-img-bio-container">
                     <div class="about-img">
-                        <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs" draggable="false">
+                        <img src="../assets/avatars/yoshi.png" alt="" class="about-imgs" draggable="false">
                     </div>
                     <div class="about-bio">
-                        <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                        <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                        <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                        <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    </div>
+                        <p class="about-bio">Avid circus monkey 🎪 and full stack software developer (in training).</p>
+                        <p class="about-bio">Beau currently resides in Seattle, WA and loves eating ramen, teaching pole dance, and rock climbing.</p>
+                        <p class="about-bio">Favorite Video Game: Zelda: Ocarina of Time</p>
+                        <p class="about-bio">Favorite Mario Character: Yoshi!</p>
                 </div>
             </div>
             <div class="about-team">
