added about me info

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -104,16 +104,18 @@
                         <p class="about-bio">Favorite Mario Character: Yoshi!</p>
                 </div>
             </div>
-            <div class="about-team">
+            <div class="about-team flex-row">
                 <div class="about-name-img-container">
-                    <h3 class="about-name">Riley Hoffman</h3>
-                    <img src="https://houeghgfcehojgitoeuv.supabase.co/storage/v1/object/public/avatars/mario.png" alt="" class="about-imgs" draggable="false">
+                    <h3 class="about-name">Will Gunderson</h3>
+                    <img src="../assets/willHeadshot.png" alt="" class="about-imgs" draggable="false">
                 </div>
                 <div class="about-bio-container">
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
-                    <p class="about-bio">blah blah blah blah blah blah blah blah blah blah</p>
+                    <ul>
+                        <li class="about-bio">Will is a software develoer in training, currently living in Bend, OR.</li>
+                        <li class="about-bio">When not coding, you can find Will swimming, hiking, and drinking a beer outside.</li>
+                        <li class="about-bio">Favorite Mario Character: Kooola Trooola.</li>
+                        <li class="about-bio">Favorite Retro Game: Street Fighter II.</li>
+                    </ul>
                 </div>
             </div>
             <div class="about-team">
