--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -17,6 +17,49 @@
                 font-size: 1rem;
             }
         }
+
+        #editIcon {
+            height: 30px;
+            width: 30px;
+            cursor: pointer;
+        }
+
+        #profilePage .tooltip {
+            background-color: white;
+            color: var(--color5);
+        }
+
+        #profilePage .tooltip:after {
+            border-color:  transparent transparent white transparent;
+        }
+
+        table {
+            margin: 10px 70px 70px;
+            border-radius: 5px;
+            font-size: 12px;
+            font-weight: normal;
+            border: none;
+            border-collapse: collapse;
+            width: 100%;
+            max-width: 100%;
+            white-space: nowrap;
+            max-width: 60vw;
+        }
+
+        th {
+            margin: 0px;
+            padding: 0px;
+            float: left;
+            width: 100px;
+            overflow: hidden;
+            white-space: nowrap;
+            background-color: black;
+            
+        }
+
+        th:after {
+            content: "............................................";
+        }
     </style>
     <title>Profile | Kaboomio</title>
 </head>
@@ -31,7 +74,7 @@
         
     </header>
     <main id="profilePage">
-        <section class="flex-row space-between infoSection">
+        <div class="flex-row space-between infoSection">
             <div class="profileMargins">
                 <div class="flex-row">
                     <img src="" alt="No Avatar" id="avatar" draggable="false">
@@ -39,9 +82,12 @@
                 </div>
                 <span id="joinedDate">Joined Date: </span>
             </div>
-            <button id="editButton" class="hidden">Edit Profile</button>
+            <div class="icons">
+                <img src="../assets/edit-icon2.png" alt="" id="editIcon">
+                <span class="tooltip">Edit</span>
+            </div>
             <p id="bio"></p>
-        </section>
+        </div>
         <div class="profileEditForm hidden">
             <form id="editProfile">
                 <div class="username-bio">
@@ -148,8 +194,21 @@
         </div>
         <div class="scoreDiv">
             <h3>User Scores</h3>
-            <div id="previousScoresContainer">
+            <div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Initials</th>
+                            <th>Score</th>
+                            <th>Level</th>
+                            <th>Date</th>
+                            <th>Elapsed Time</th>
+                        </tr>
+                    </thead>
+                    <tbody  id="previousScoresContainer">
 
+                    </tbody>
+                </table>
             </div>
         </div>
     </main>
