small css updates to table

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -40,6 +40,7 @@
             flex-direction: column;
             flex-wrap: nowrap;
             align-items: center;
+            font-size: x-large;
         }
 
         th, td {
@@ -54,6 +55,7 @@
 
         th {
             margin-bottom: 15px;
+            font-weight: 900;
         }
 
         td {
@@ -67,6 +69,10 @@
         .placeholder {
             width: 30px;
             margin-left: 10px;
+        }
+
+        .scoreDiv {
+            border-radius: 10px;
         }
     </style>
     <title>Profile | Kaboomio</title>
