change favorite character

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -77,7 +77,7 @@
                     <ul>
                         <li class="about-bio">.....Will is a software develoer in training, currently living in Bend, OR.</li>
                         <li class="about-bio">.....When not coding, you can find Will swimming, hiking, and drinking a beer outside.</li>
-                        <li class="about-bio">.....Favorite Mario Character: Kooola Trooola.</li>
+                        <li class="about-bio">.....Favorite Mario Character: Koopa Troopa.</li>
                         <li class="about-bio">.....Favorite Retro Game: Street Fighter II.</li>
                     </ul>
                 </div>
