--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -47,7 +47,7 @@
 <div class="leaderboard">
 
     <div class="leaderboard-left">
-        <a href="/about-page/index.html" draggable="false"><img class="trophy" src="../assets/leaderboard-trophy.png" alt="" draggable="false"></a>
+        <a href="/about-page/index.html" draggable="false" id="leaderboard-trophy-container"><img class="trophy" src="../assets/leaderboard-trophy.png" alt="" draggable="false"></a>
     </div>
 
     <div class="leaderboard-right">
@@ -61,7 +61,7 @@
             <option value="asc">Lowest</option>
         </select>
         <div class="table">
-            <h3>Initials</h3>  <h3>Score</h3> <p>Time</p> 
+            <h3>Initials</h3>  <h3>Score</h3> <h3>Time</h3> 
         </div>
             <div class="score-container">
 
