styling and animations on leaderboard and homepage

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -12,6 +12,22 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
     <title>Home | Kaboomio</title>
+    <style>
+        #avatar-icon:hover{
+        animation: shake 4s forwards infinite;
+        }
+        @keyframes shake {
+    0%{ transform: rotate(10deg); }
+    25%{ transform: rotate(-25deg)}
+    50%{ transform: rotate(25deg) }
+    75% { transform: rotate(-25deg)}
+    100%{ transform: rotate(10deg)}
+}
+
+#label a{
+    text-decoration: none;
+}
+    </style>
 </head>
 <body>
     <div class="loading-screen invisible">
