changes to the loading screen functionality

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -26,7 +26,7 @@
     <title>Meet The Team | Kaboomio</title>
 </head>
 <body class="about-body">
-    <div class="loading-screen invisible">
+    <div class="loading-screen">
         <div class="loading-img-container">
             <img src="../assets/mario-running.gif" class="loading-img" />
         </div>
