--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body id="leaderboard-body">
-    <div class="loading-screen invisible">
+    <div class="loading-screen">
         <div class="loading-img-container">
             <img src="../assets/mario-running.gif" class="loading-img" />
         </div>
