--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -78,7 +78,7 @@
     <title>Profile | Kaboomio</title>
 </head>
 <body>
-    <div class="loading-screen invisible">
+    <div class="loading-screen">
         <div class="loading-img-container">
             <img src="../assets/mario-running.gif" class="loading-img" />
         </div>
