--- a/home-page/index.html
+++ b/home-page/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <div class="loading-screen invisible">
+    <div class="loading-screen">
         <div class="loading-img-container">
             <img src="../assets/mario-running.gif" class="loading-img" />
         </div>
