--- a/mario/index.html
+++ b/mario/index.html
@@ -35,6 +35,12 @@
 </head>
 
 <body>
+    <div class="loading-screen">
+        <div class="loading-img-container">
+            <img src="../assets/mario-running.gif" class="loading-img" />
+        </div>
+        <p>Loading...</p>
+    </div>
     <header>
         <div class="header-left">
             <div>
