fixing edit icon

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -97,7 +97,7 @@
                 <span id="joinedDate">Joined Date: </span>
             </div>
             <div class="icons">
-                <img src="../assets/edit-icon2.png" alt="" id="editIcon">
+                <img src="../assets/edit-icon2.png" alt="" id="editIcon" class="hidden">
                 <span class="tooltip">Edit</span>
             </div>
             <p id="bio"></p>
