adding easter eggs

--- a/mario/index.html
+++ b/mario/index.html
@@ -42,6 +42,7 @@
 
     </header>
     <img src="../assets/gameboyContainer.png" alt="" id="gameboyContainer">
+    <div id="whereAmI"></div>
     <footer>
         <div class="footer-left">
             <a href="../about-page" id="about-link" draggable="false">
