added easter egg

--- a/mario/index.html
+++ b/mario/index.html
@@ -54,6 +54,7 @@
         <div class="copy footer-right">&copy; 2022 Alchemy Code Lab</div>
     </footer>
     <script type="module" src="./mario.js"></script>
+    <script type="module" src="../easterEgg.js"></script>
 </body>
 
 </html>
