change mario.js file order for presentation

--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="icons">
                 <img src="../assets/edit-icon2.png" alt="" id="editIcon" class="hidden">
-                <span class="tooltip">Edit</span>
+                <span class="tooltip hidden">Edit</span>
             </div>
             <p id="bio"></p>
         </div>
