added mute functionality and changed button text

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -48,7 +48,7 @@
         <section id="second-row">
             <section id="display-games">
                 <img src="/assets/real-play.GIF" draggable="false" />
-                <button id="play-game-button">Play Game</button>
+                <button id="play-game-button">Mario Time!</button>
             </section>
             <section id="leaderboard-container">
                 <p id="label">Leader Board <a href="/leaderboard/index.html" draggable="false">🏆</a></p>
