--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h3>Sign In</h3>
                     <label>Email </label><input type="email" name="email" id="sign-in-email"/>
                     <label>Password </label><input type="password" name="password" id="sign-in-password"/>
-                    <button>Submit</button>
+                    <button>Let's a Go!</button>
                 </form>
             </div>
         </div>
@@ -56,7 +56,7 @@
                     <h3>Sign Up</h3>
                     <label>Email </label><input type='email' name='email' id="sign-up-email" />
                     <label>Password </label><input type='password' name='password' id="sign-up-password" />
-                    <button>Submit</button>
+                    <button>Let's a Go!</button>
                 </form>
             </div>
         </div>
