--- a/mario/index.html
+++ b/mario/index.html
@@ -27,6 +27,12 @@
             width: 704px;
             z-index: 1;
         }
+        @media (max-width: 935px){
+        header{
+            font-size: .5rem;
+            width: fit-content;
+        }
+    }
     </style>
     <title>Kaboomio</title>
 </head>
