--- a/profile-page/index.html
+++ b/profile-page/index.html
@@ -56,7 +56,7 @@
                         <h3>Edit Bio:</h3>
                         <textarea id="editBio" name="bio" placeholder="Write a brief bio here"></textarea>
                     </div>
-                    <button>Submit Changes</button>
+                    <button>Wahoo!</button>
                 </div>
                 <div class="avatar-select">
                     <h3>Choose A New Avatar:</h3>
