--- a/profile-setup/index.html
+++ b/profile-setup/index.html
@@ -53,7 +53,7 @@
                     <h3>Write a Bio (Optional):</h3>
                     <textarea name="bio" placeholder="Write a brief bio to be displayed on your profile page" id="bio"></textarea>
                 </div>
-                <button>Submit</button>
+                <button>Mama Mia!</button>
             </div>
             <div class="avatar-select">
                 <h3>Select an Avatar:</h3>
